add service and environment configuration
